propogated fix to other widgets.  Also improved the selected lease blocks display during the site selection after realizing that the layer was being loaded after each adjustment.  ensured that it is only loaded once the first time the user selects the Show Lease Blocks button from the form, and then setting visibility accordingly and using redraw() rather than refresh()

--- a/media/marco/css/marco_style.css
+++ b/media/marco/css/marco_style.css
@@ -31,6 +31,10 @@ p {
 a:focus {
     outline: none;
 }
+li a {
+    cursor: pointer;
+    cursor: hand;
+}
 
 #fullscreen {
 	display: none;
@@ -113,10 +117,10 @@ a:focus {
 	border-right: 1px solid #ccc;
 
 }
-	.navbar .nav > li > a {
-		line-height: 12px;
-		color: #333;
-	}	
+.navbar .nav > li > a {
+    line-height: 12px;
+    color: #333;
+}	
 .navbar form {
 	margin-top: 26px;
 }
